--- a/Nvision/Properties/Resources.resx
+++ b/Nvision/Properties/Resources.resx
@@ -127,4 +127,10 @@
   <data name="Nvision" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Nvision.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="NvisionPurple" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NvisionPurple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NvisionPurple1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NvisionPurple.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
